--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 
 
 <html>
-    <p>
-        hello world perhap
-    </p>
-    <P>this is a test</P>
+    <h1>Welcome to GeoTech!!</h1>
+    <h2>This website was created and licensed by factcheckers</h2>   
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        ,<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Proceed!</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <button>Click for the magic!</button>
+    </body>
 </html>
