--- a/firstpage.html
+++ b/firstpage.html
@@ -1,37 +1,3 @@
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        ,<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Proceed!</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <button>Welcome to GeoTech!</button>
-    </body>
-</html>
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Navigation</title>
-</head>
-<body>
-    <button id="navigateButton">Go to Next Page</button>
-
-    <script>
-        document.getElementById('navigateButton').addEventListener('click', function() {
-            window.location.href = 'firstpage.html'; 
-        });
-    </script>
-</body>
-</html>
-
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
@@ -39,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="firstpage.css">
 <title>responsive navbar</title>
 </head>
 <body>
