--- a/FirstPage.html
+++ b/FirstPage.html
@@ -1,25 +1,24 @@
-<!-- Taskbar -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced Menu Bar</title>
+  <title>KB IH Website</title>
   <link rel="stylesheet" href="FirstPage.css">
 </head>
 <body>
-
- 
+  <!-- Taskbar -->
   <nav class="navbar">
     <div class="logo">
       <a href="FirstPage.html">KB IH Website</a>
     </div>
     <ul class="nav-links">
       <li><a href="FirstPage.html">Home</a></li>
-      <li><a href="Maps.html">Maps</a></li>
-      <li><a href="About.html">About</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+      <li><a href="Flashcards.html">Flashcards</a></li>
       <li><a href="Contact.html">Contact us</a></li>
     </ul>
+    <!-- Hamburger menu for mobile -->
     <div class="hamburger">
       <div class="line"></div>
       <div class="line"></div>
@@ -27,36 +26,20 @@
     </div>
   </nav>
 
+  <!-- Introduction Section -->
+  <div class="content-wrapper">
+    <div class="image-placeholder">
+      <img src="FirstPage.jpg" alt="Historical image" />
+    </div>
+    <div class="introduction">
+      <h1>Welcome to the KB IH Website!</h1>
+      <p>
+        Dive deep into the untold stories, legendary moments, and pivotal events that shaped the world as we know it. Whether you're a seasoned historian, a curious learner, or someone just passing through, our site transforms the past into an unforgettable adventure. With every click, you'll uncover secrets, relive iconic events, and witness the evolution of humanity through engaging content, immersive timelines, and a rich array of multimedia. Ready to step back in time? Let us be your guide. Geography and history have never been this exciting!
+      </p>
+    </div>
+  </div>
+
+  <script src="FirstPage.js"></script>
 </body>
 </html>
 
-
- <!-- Introduction Text -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Introduction Section</title>
-   <link rel="stylesheet" href="FirstPage.css">
- </head>
- <body>
- 
-  
-   <div class="content-wrapper">
-     <div class="image-placeholder">
-     
-       <img src="FirstPage.jpg" alt="Historical image" />
-     </div>
-     
-     <div class="introduction">
-       <h1>Welcome to the KB IH Website!</h1>
-       <p>
-         Dive deep into the untold stories, legendary moments, and pivotal events that shaped the world as we know it. Whether you're a seasoned historian, a curious learner, or someone just passing through, our site transforms the past into an unforgettable adventure. With every click, you'll uncover secrets, relive iconic events, and witness the evolution of humanity through engaging content, immersive timelines, and a rich array of multimedia. Ready to step back in time? Let us be your guide. History has never been this exciting!
-       </p>
-     </div>
-   </div>
- 
- </body>
- </html>
- 
