--- a/Contact.html
+++ b/Contact.html
@@ -16,8 +16,8 @@
     </div>
     <ul class="nav-links">
       <li><a href="FirstPage.html">Home</a></li>
-      <li><a href="Maps.html">Maps</a></li>
-      <li><a href="About.html">About</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+      <li><a href="Flashcards.html">Flashcards</a></li>
       <li><a href="Contact.html">Contact us</a></li>
     </ul>
     <div class="hamburger">
@@ -38,21 +38,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Contact Us</title>
+    <title>About Us</title>
+    <link rel="stylesheet" href="Contact.css">
 </head>
 <body>
-    <div class="menu-bar">
-        <!-- Your existing menu bar code here -->
-    </div>
-    
-    <div class="content">
-        <h1 class="big-title">Welcome to Our Website</h1>
-        <h2 class="contact-title">Contact Us</h2>
-        <div class="contact-info">
-            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-            <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+    <!-- Header Section -->
+    <header class="about-header">
+        <h1>About Us</h1>
+        <p>Thanks for checking my website out! i hope you liked it and please feel free to contact down bellow if </p>
+    </header>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <div class="about-content">
+            <h2 class="animate-slide-left">Our Vision</h2>
+            <p class="animate-fade-in">
+                We envision a world where technology and creativity converge to build impactful solutions that enhance lives.
+            </p>
         </div>
-    </div>
+        <div class="about-image">
+            <img src="Spider-Web-Vision.webp" alt="Vision Image" class="animate-image">
+        </div>
+    </section>
+
+    <!-- Mission Section -->
+    <section class="mission-section">
+        <div class="about-content">
+            <h2 class="animate-slide-right">Our Mission</h2>
+            <p class="animate-fade-in">
+              As an 18-year-old student with a deep passion for global topics, I’ve come to realize that understanding the history of the world is not just important—it's essential for the future. I believe that New Zealand, like many other nations, stands to benefit immensely from a greater awareness of global history. Without this knowledge, we risk repeating the same mistakes that have shaped past conflicts, struggles, and failures. History teaches us critical lessons about governance, diplomacy, and human rights, and by embracing it, we can build a more informed and resilient future for our country.
+            </p>
+        </div>
+        <div class="about-image">
+            <img src="our-mission (1).png" alt="Mission Image" class="animate-image">
+        </div>
+    </section>
+
+    <!-- Contact Us Section -->
+    <section class="contact-section">
+        <div class="contact-text">
+            <h2 class="animate-zoom-in">Contact Us</h2>
+            <p class="animate-fade-in">For any inquiries, feel free to <a href="Contact.html">reach out to us</a>.</p>
+        </div>
+    </section>
+
 </body>
 </html>
