--- a/Contact.html
+++ b/Contact.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Enhanced Menu Bar</title>
-  <link rel="stylesheet" href="FirstPage.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
  
   <nav class="navbar">
     <div class="logo">
-      <a href="FirstPage.html">KB IH Website</a>
+      <a href="index.html">KB IH Website</a>
     </div>
     <ul class="nav-links">
       <li><a href="FirstPage.html">Home</a></li>
