--- a/quiz.html
+++ b/quiz.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Enhanced Menu Bar</title>
-  <link rel="stylesheet" href="FirstPage.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
  
   <nav class="navbar">
     <div class="logo">
-      <a href="FirstPage.html">KB IH Website</a>
+      <a href="index.html">KB IH Website</a>
     </div>
     <ul class="nav-links">
-      <li><a href="FirstPage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="quiz.html">Quiz</a></li>
       <li><a href="Flashcards.html">Flashcards</a></li>
       <li><a href="Contact.html">Contact us</a></li>
