--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
       <a href="index.html">KB IH Website</a>
     </div>
     <ul class="nav-links">
-      <li><a href="FirstPage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="quiz.html">Quiz</a></li>
       <li><a href="Flashcards.html">Flashcards</a></li>
       <li><a href="Contact.html">Contact us</a></li>
