--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Introduction Section -->
   <div class="content-wrapper">
     <div class="image-placeholder">
-      <img src="FirstPage.jpg" alt="Historical image" />
+      <img src="index.Jpg" alt="Historical image" />
     </div>
     <div class="introduction">
       <h1>Welcome to the KB IH Website!</h1>
