--- a/Flashcards.html
+++ b/Flashcards.html
@@ -1,8 +1,3 @@
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,48 +35,217 @@
           <div class="line"></div>
         </div>
       </nav>
+    
+      <main>
+      <div class="flashcard-container">
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the largest desert in the world?</h2>
+            </div>
+            <div class="back">
+                <h2>The Antarctic Desert</h2>
+                <p>Covering an area of 14 million square kilometers, the Antarctic Desert is the largest desert on Earth.</p>
+            </div>
+        </div>
 
-  <!-- Flashcards Section -->
-  <section class="flashcards-section">
-    <h1>Explore Interactive Flashcards</h1>
-    <div class="flashcards-container">
-      <!-- Example Flashcard 1 -->
-      <div class="flashcard">
-        <div class="front">
-          <h3>Term</h3>
-          <p>What is the capital of France?</p>
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which country has the longest coastline?</h2>
+            </div>
+            <div class="back">
+                <h2>Canada</h2>
+                <p>Canada's coastline stretches over 202,080 kilometers, making it the longest in the world.</p>
+            </div>
         </div>
-        <div class="back">
-          <h3>Answer</h3>
-          <p>Paris</p>
-        </div>
-      </div>
 
-      <!-- Example Flashcard 2 -->
-      <div class="flashcard">
-        <div class="front">
-          <h3>Term</h3>
-          <p>Who wrote "1984"?</p>
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the oldest known civilization?</h2>
+            </div>
+            <div class="back">
+                <h2>The Sumerians</h2>
+                <p>The Sumerians established one of the world's first civilizations in Mesopotamia around 3500 BC.</p>
+            </div>
         </div>
-        <div class="back">
-          <h3>Answer</h3>
-          <p>George Orwell</p>
-        </div>
-      </div>
 
-      <!-- Example Flashcard 3 -->
-      <div class="flashcard">
-        <div class="front">
-          <h3>Term</h3>
-          <p>What is the largest planet in our solar system?</p>
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which continent is known as the "Dark Continent"?</h2>
+            </div>
+            <div class="back">
+                <h2>Africa</h2>
+                <p>Africa was historically referred to as the "Dark Continent" due to the lack of knowledge and understanding about it.</p>
+            </div>
         </div>
-        <div class="back">
-          <h3>Answer</h3>
-          <p>Jupiter</p>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the capital city of Australia?</h2>
+            </div>
+            <div class="back">
+                <h2>Canberra</h2>
+                <p>Canberra was selected as the capital of Australia in 1908 as a compromise between rivals Sydney and Melbourne.</p>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which river is the longest in the world?</h2>
+            </div>
+            <div class="back">
+                <h2>The Nile River</h2>
+                <p>The Nile River flows over 6,650 kilometers and is traditionally regarded as the longest river in the world.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the smallest country in the world?</h2>
+            </div>
+            <div class="back">
+                <h2>Vatican City</h2>
+                <p>Vatican City is an independent city-state enclaved within Rome, Italy, and is the smallest country in the world.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which ancient wonder was located in Babylon?</h2>
+            </div>
+            <div class="back">
+                <h2>The Hanging Gardens</h2>
+                <p>The Hanging Gardens of Babylon are considered one of the Seven Wonders of the Ancient World, though their existence is debated.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the longest river in Asia?</h2>
+            </div>
+            <div class="back">
+                <h2>The Yangtze River</h2>
+                <p>Flowing over 6,300 kilometers, the Yangtze River is the longest river in Asia and the third-longest in the world.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which continent is home to the Amazon Rainforest?</h2>
+            </div>
+            <div class="back">
+                <h2>South America</h2>
+                <p>The Amazon Rainforest is primarily located in Brazil and is the largest tropical rainforest in the world.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the highest mountain in the world?</h2>
+            </div>
+            <div class="back">
+                <h2>Mount Everest</h2>
+                <p>Mount Everest, located in the Himalayas, reaches an elevation of 8,848 meters above sea level.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which ocean is the largest?</h2>
+            </div>
+            <div class="back">
+                <h2>The Pacific Ocean</h2>
+                <p>The Pacific Ocean covers more than 63 million square miles, making it the largest ocean on Earth.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the capital of Egypt?</h2>
+            </div>
+            <div class="back">
+                <h2>Cairo</h2>
+                <p>Cairo is the capital city of Egypt and is known for its rich history, including the nearby Pyramids of Giza.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the most populous country in the world?</h2>
+            </div>
+            <div class="back">
+                <h2>China</h2>
+                <p>China has the largest population of any country, with over 1.4 billion residents.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What ancient civilization built the pyramids?</h2>
+            </div>
+            <div class="back">
+                <h2>The Egyptians</h2>
+                <p>The ancient Egyptians constructed the pyramids as tombs for their pharaohs during the Old and Middle Kingdoms.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the primary language spoken in Brazil?</h2>
+            </div>
+            <div class="back">
+                <h2>Portuguese</h2>
+                <p>Portuguese is the official language of Brazil, making it the largest Portuguese-speaking country in the world.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which continent is known for its diverse wildlife?</h2>
+            </div>
+            <div class="back">
+                <h2>Australia</h2>
+                <p>Australia is famous for its unique wildlife, including kangaroos, koalas, and the Great Barrier Reef.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which empire was known for its road system?</h2>
+            </div>
+            <div class="back">
+                <h2>The Roman Empire</h2>
+                <p>The Roman Empire is renowned for its extensive network of roads, which facilitated trade and military movement.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What is the largest island in the world?</h2>
+            </div>
+            <div class="back">
+                <h2>Greenland</h2>
+                <p>Greenland is the largest island in the world, covering an area of about 2.166 million square kilometers.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>What ancient city is known as the "Rose City"?</h2>
+            </div>
+            <div class="back">
+                <h2>Petra</h2>
+                <p>Petra, located in Jordan, is called the "Rose City" due to the color of the stone from which it is carved.</p>
+            </div>
+        </div>
+
+        <div class="flashcard">
+            <div class="front">
+                <h2>Which country invented paper?</h2>
+            </div>
+            <div class="back">
+                <h2>China</h2>
+                <p>Paper was invented in China during the Han Dynasty around 105 AD by Cai Lun.</p>
+                <main>
 
   <script src="flashcards.js"></script>
 </body>
