--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
  
   <nav class="navbar">
     <div class="logo">
-      <a href="index.html">KB IH Website</a>
+      <a href="index.html">KB IH </a>
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
