--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
     <div class="logo">
       <a href="index.html">KB IH</a>
     </div>
+    <div class="hamburger" id="mobile-menu">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="quiz.html">Quiz</a></li>
       <li><a href="Flashcards.html">Flashcards</a></li>
       <li><a href="Contact.html">Contact</a></li>
     </ul>
-    <div class="hamburger">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </div>
   </nav>
-
 
   <section class="hero">
     <div class="hero-content">
@@ -34,5 +33,6 @@
     </div>
   </section>
 
-  
+  <script src="index.js"></script>
+</body>
 </html>
